# UML

./: .gitignore  Cargo.toml
derive_macros/: Cargo.toml
derive_macros/src/: lib.rs
src/: app.rs  fonts.rs  main.rs  renderer.rs  sample.rs  workspace.rs
src/animations/: animated_property.rs  delta_animation.rs  mod.rs  standard_animation.rs  traits.rs
src/app/: app.rs  context.rs  event_target.rs  mod.rs  renderer.rs  state.rs  tree.rs  viewport.rs
src/app/renderer/: canvas.rs  mod.rs  png.rs  window.rs
src/data/: connection.rs  entity.rs  mod.rs  project.rs
src/elements/: actionbar.rs  button.rs  element.rs  element_style.rs  mod.rs  node.rs  segmented_control.rs  sidebar.rs  text_element.rs  text_input.rs  text_node.rs  toolbox.rs  toolbox_item.rs  toolbox_item_icon.rs  tooltip.rs  viewport.rs  workspace.rs
src/elements/primitives/: box_element.rs  fancy_box.rs  icon.rs  mod.rs  simple_box.rs  text.rs  traits.rs
src/elements/sidebar/: category.rs  connection.rs  field.rs  implementation.rs  list.rs  methods.rs  mod.rs  name.rs  parent.rs  type.rs
src/elements/sidebar/connections/: item.rs  mod.rs
src/elements/statusbar/: button.rs  mod.rs
src/elements/workspace/: connection.rs  entity.rs  item.rs  mod.rs  workspace.rs
src/geometry/: mod.rs  rect.rs  vec2.rs
src/presentation/: colors.rs  fonts.rs  mod.rs
src/web/: download.rs  main_modifier.rs  mod.rs  resize.rs  screenshot.rs  scroll.rs  upload.rs
