[workspace]
members = ["derive_macros"]

[package]
name = "UML"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = { version = "0.4.0", features = ["macro"] }
taffy = { version = "0.7.0", default-features = false, features = [
  "std",
  "taffy_tree",
  "flexbox",
] }
vello = "0.3.0"
winit = "0.30.5"
derive_macros = { path = "derive_macros" }
serde = "1.0.216"
slotmap = { version = "1.0.7", features = ["serde"] }
futures-intrusive = "0.5.0"
png = "0.17.16"
postcard = { version = "1.1.1", default-features = false, features = [
  "use-std",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.72", features = [
  "HtmlCollection",
  "Navigator",
  "Text",
  "WheelEvent",
] }
web-time = "1.1.0"
